; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/xmon/extr_start.c_xmon_readchar.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/xmon/extr_start.c_xmon_readchar.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @xmon_readchar() #0 {
  %1 = alloca i32, align 4
  br i1 true, label %2, label %4

2:                                                ; preds = %0
  %3 = call i32 (...) @udbg_getc()
  store i32 %3, i32* %1, align 4
  br label %5

4:                                                ; preds = %0
  store i32 -1, i32* %1, align 4
  br label %5

5:                                                ; preds = %4, %2
  %6 = load i32, i32* %1, align 4
  ret i32 %6
}

declare dso_local i32 @udbg_getc(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
